# Ex5

./: CMakeLists.txt  DataStore.cpp  DataStore.h  DataStoreImp.h  IntStore.cpp  Store.h  StoreBase.h  Tiyuta.cpp  bool_temp.cpp  main.cpp
